kcms/krdb: Wait until root window cursor is set

It looks like the X server may not process queued requests from a client
if it disconnects. In order to address that, this change makes krdb wait
until the root window cursor is set and only then terminate the temporary
connection.

BUG: 499965


(cherry picked from commit 89f99b2fa8770431b64ef19fb9ecc48628cdeac8)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>